Fix/sonarqube quality
* fix: resolve SonarCloud code smells across both services

- BookJpaAdapter: replace double Optional access with flatMap (S3655)
- BookService/StockService: extract duplicated string literals to constants (S1192)
- BookId/UserId: convert to records with compact constructor validation (S6206)
- ISBN: use \D instead of [^0-9] in regex (S6353)
- JwtProvider/JwtValidator: replace generic throws Exception with IllegalStateException on key load failure (S112)
- JwtAuthFilter: use method reference and Stream.toList() (S1612, S6204)
- GlobalExceptionHandler: replace deprecated UNPROCESSABLE_ENTITY with UNPROCESSABLE_CONTENT (S1874)
- DomainException: remove empty statement (S1116)
- OrderControllerIT: remove unused imports (S1128)

* test: improve domain and service unit test coverage

- Add BookIdTest, UserIdTest, UserTest, TokenMetadataTest (new domain tests)
- Add Book.existing() branch tests to BookTest
- Add ISBN equals branch tests (same reference, null, different type)
- Add updateBook tests to BookServiceTest covering null guard,
  not-found, full update, and null-fields-keep-existing branches

* test: cover error paths and fix AssertJ assertion style

- Add JwtProvider init() error path tests for all three catch blocks
- Add JwtValidator init() error path test for loadPublicKey catch
- Add GlobalExceptionHandlerTest covering handleDomain (422 path)
- Add UserRestMapperTest covering toResponse, toCreateCommand branches,
  and toUpdateCommand
- Replace hashCode/toString raw calls with hasSameHashCodeAs/hasToString
- Replace isbn.equals() inside assertThat with isNotEqualTo (S5785)